cleaning up alignment issues, removing divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,103 +1,105 @@
 body {
-  text-align: center;
-  background-image: url("../images/dot-grid.png");
-  position: relative;
-  display: inline-table;
+	text-align: center;
+	background-image: url('../images/dot-grid.png');
+	position: relative;
+	display: inline-block;
 }
 
 #screen {
-  overflow: auto;
-  align-content: center;
-  display: inline-block;
+	overflow: auto;
+	align-content: center;
+	display: inline-block;
 }
 
 #screen div {
-  align-content: left;
-  overflow: auto;
-  text-align: center;
-  font-size: 1.3em;
+	align-content: left;
+	overflow: auto;
+	text-align: center;
+	font-size: 1.3em;
 }
 
 #title {
-  font-size: 3em;
-  align-self: auto;
-  align-items: center;
-  width: 100%;
-  padding: 4px;
-  margin-bottom: 10px;
-  color: white;
-  background-color: rgb(250, 212, 248);
+	font-size: 3em;
+	align-self: auto;
+	align-items: center;
+	width: 100%;
+	padding: 4px;
+	margin-bottom: 10px;
+	color: white;
+	background-color: rgb(250, 212, 248);
+	text-align: center;
 }
 
 #rules-area {
-  align-items: left;
-  width: 80%;
-  height: 70%;
-  padding: 4px;
-  margin-bottom: 10px;
-  color: rgb(149, 247, 120);
+	align-items: center;
+
+	padding: 10px;
+	margin-bottom: 10px;
+	color: rgb(149, 247, 120);
 }
 
 #random-area {
-  /* height: 100px; */
-  padding: 2px;
-  font-size: 5em;
-  color: rgb(254, 254, 255);
-  background-color: rgb(250, 212, 248);
-  display: inline;
+	/* height: 100px; */
+	padding: 2px;
+	font-size: 5em;
+	color: rgb(254, 254, 255);
+	background-color: rgb(250, 212, 248);
+	display: inline;
 }
 
 #score-area {
-  width: 50%;
-  height: 100px;
-  padding: 4px;
-  color: rgb(128, 101, 248);
-  background-color: rgba(252, 218, 252, 0.973);
-  display: inline-block;
+	overflow: auto;
+	padding: 10px;
+	color: rgb(128, 101, 248);
+	background-color: rgba(252, 218, 252, 0.973);
+	display: inline-block;
 }
 
 #score-title {
-  font-size: 1.3em;
-  padding: 4px;
-  margin-bottom: 10px;
-  color: rgb(247, 246, 250);
-  background-color: rgb(208, 199, 250);
+	font-size: 1.3em;
+	padding: 4px;
+	margin: 10px;
+	color: rgb(247, 246, 250);
+	background-color: rgb(208, 199, 250);
 }
 
 .crystals-button {
-  display: inline;
+	display: inline;
 }
 
 .crystal-img {
-  width: 75px;
-  height: 75px;
-  background-color: rgb(218, 212, 247);
-  border: solid;
-  border-color: rgb(208, 199, 250);
+	width: 75px;
+	height: 75px;
+	background-color: rgb(218, 212, 247);
+	border: solid;
+	border-color: rgb(208, 199, 250);
 }
 
 #score-number {
-  font-size: 2.5em;
+	font-size: 2.5em;
 }
 
 #win-area {
-  width: 25%;
-  height: 100px;
-  padding: 4px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  background-color: rgb(222, 217, 248);
+	width: 25%;
+	height: 100px;
+	padding: 4px;
+	margin: auto;
+	background-color: rgb(222, 217, 248);
 }
 .main-body {
-  overflow: auto;
-  display: inline-table;
+	overflow: auto;
+	display: inline-table;
 }
-.card-header {
-  background-color: lavender;
-  font-size: 1.5em;
-  color: white;
-  width: fit-content;
+.card-header1 {
+	background-color: lavender;
+	font-size: 1.5em;
+	color: white;
+	width: fit-content;
+	padding: 5px;
+	position: left;
 }
 .card-body {
-  text-align: left;
+	text-align: left;
+	margin: auto;
+	padding: 5px;
 }
